--- a/ElStudio/ShowImageTableViewCell.xib
+++ b/ElStudio/ShowImageTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,7 +15,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dqQ-zV-EvS">
-                        <rect key="frame" x="65" y="16" width="201" height="155"/>
+                        <rect key="frame" x="65" y="17" width="201" height="155"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="39f-P4-fYM">
                                 <rect key="frame" x="0.0" y="0.0" width="201" height="155"/>
@@ -27,13 +27,41 @@
                             <outletCollection property="gestureRecognizers" destination="Mrr-a0-0s4" appends="YES" id="wdB-SF-hmk"/>
                         </connections>
                     </view>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcS-aD-S9V">
+                        <rect key="frame" x="244" y="8" width="37" height="30"/>
+                        <color key="backgroundColor" red="0.86666666670000003" green="0.0" blue="0.015686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" title="+">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="IncreaseCount:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="WcT-L4-stE"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m4H-hK-0Q3">
+                        <rect key="frame" x="40" y="8" width="37" height="30"/>
+                        <color key="backgroundColor" red="0.86666666670000003" green="0.0" blue="0.015686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <state key="normal" title="-">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="DecreaseCount:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="TWU-B4-Vuh"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ccT-SZ-Yoh">
+                        <rect key="frame" x="133" y="10" width="64" height="21"/>
+                        <color key="backgroundColor" red="0.86666666670000003" green="0.0" blue="0.015686274510000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
                 <outlet property="container" destination="dqQ-zV-EvS" id="e73-Xf-ymK"/>
+                <outlet property="counter" destination="ccT-SZ-Yoh" id="Oda-yZ-rzR"/>
                 <outlet property="oneimg" destination="39f-P4-fYM" id="Lph-rR-sX8"/>
             </connections>
-            <point key="canvasLocation" x="353" y="240.5"/>
+            <point key="canvasLocation" x="353" y="237.5"/>
         </tableViewCell>
         <pinchGestureRecognizer id="Mrr-a0-0s4">
             <connections>
