--- a/ElStudio/Base.lproj/Main.storyboard
+++ b/ElStudio/Base.lproj/Main.storyboard
@@ -85,7 +85,7 @@
                     </tableView>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" title="Cart" id="gyG-vS-Z5U">
-                        <barButtonItem key="rightBarButtonItem" title="Update" id="buq-jq-NDp">
+                        <barButtonItem key="rightBarButtonItem" title="Send" id="buq-jq-NDp">
                             <connections>
                                 <action selector="UploadOrder:" destination="1E5-Z4-eJy" id="1v5-kY-4rA"/>
                             </connections>
