--- a/ElStudio/Base.lproj/Main.storyboard
+++ b/ElStudio/Base.lproj/Main.storyboard
@@ -238,12 +238,22 @@
                                     <action selector="Instagram:" destination="Otx-Jd-g8A" eventType="touchUpInside" id="pcN-ii-6G4"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zR3-9k-Mjc">
+                                <rect key="frame" x="202" y="98" width="86" height="30"/>
+                                <state key="normal" title="Logout">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="InstagramLogOut:" destination="Otx-Jd-g8A" eventType="touchUpInside" id="76N-ha-Ljd"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="JpR-X3-nhr"/>
                     <connections>
+                        <outlet property="InstLogOutBtn" destination="zR3-9k-Mjc" id="3Nj-aj-A1t"/>
                         <segue destination="ynv-tx-TWD" kind="push" identifier="GoToImages" id="okT-V5-Qxb"/>
                         <segue destination="MTI-CC-woy" kind="push" identifier="InstagramLogin" id="u3Z-RX-0HY"/>
                         <segue destination="bYl-fq-go3" kind="push" identifier="InstagramShow" id="Oxm-nE-64E"/>
